新增房间功能

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <div id="videos">
     <video id="localVideo" autoplay muted></video>
   </div>
-  <button id="hangupBtn">挂断</button>
   <button id="callBtn">CALL</button>
+  <button id="disableVideo">摄像头</button>
+  <button id="disableAudio">麦克风</button>
+  <button id="hangupBtn">挂断</button>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/lib/adapter.js"></script>
