多人视频部分 完成

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="videos">
     <video id="localVideo" autoplay muted></video>
   </div>
-  <button id="callBtn">CALL</button>
+  <!-- <button id="callBtn">CALL</button> -->
   <button id="disableVideo">摄像头</button>
   <button id="disableAudio">麦克风</button>
   <button id="hangupBtn">挂断</button>
