--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <textarea name="" id="dataChannelSend"></textarea>
     </div>
     <button id="sendButton">Send</button>
+    <input type="file" id="sendFile">
+    <a id="receivedFileLink">下载</a>
   </div>
 
 
